fix(crud): updated docs and struct
